<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.gopnick.nekitpc.sqlite_crud.MainActivity">

    <EditText
        android:id="@+id/edtID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/id"/>

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtID"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/fName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtFirstName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/lName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtLastName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtSalary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtAddress"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/salary"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtSalary"
        android:hint="@string/insert" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnInsert"
        android:layout_alignBottom="@+id/btnInsert"
        android:layout_toEndOf="@+id/btnInsert"
        android:layout_toRightOf="@+id/btnInsert"
        android:hint="@string/update" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnUpdate"
        android:layout_alignBottom="@+id/btnUpdate"
        android:layout_toEndOf="@+id/btnUpdate"
        android:layout_toRightOf="@+id/btnUpdate"
        android:hint="@string/delete" />

    <Button
        android:id="@+id/btnLoadAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtSalary"
        android:layout_toEndOf="@+id/btnDelete"
        android:layout_toRightOf="@+id/btnDelete"
        android:hint="@string/loadAll" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnUpdate"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
